; ModuleID = '/home/carl/AnghaBench/tini/src/extr_tini.c_add_expect_status.c'
source_filename = "/home/carl/AnghaBench/tini/src/extr_tini.c_add_expect_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STATUS_MIN = common dso_local global i64 0, align 8
@STATUS_MAX = common dso_local global i64 0, align 8
@expect_status = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @add_expect_status(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i64 0, i64* %4, align 8
  store i8* null, i8** %5, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i64 @strtol(i8* %6, i8** %5, i32 10)
  store i64 %7, i64* %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %15, label %10

10:                                               ; preds = %1
  %11 = load i8*, i8** %5, align 8
  %12 = load i8, i8* %11, align 1
  %13 = sext i8 %12 to i32
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %10, %1
  store i32 1, i32* %2, align 4
  br label %32

16:                                               ; preds = %10
  %17 = load i64, i64* %4, align 8
  %18 = load i64, i64* @STATUS_MIN, align 8
  %19 = icmp slt i64 %17, %18
  br i1 %19, label %24, label %20

20:                                               ; preds = %16
  %21 = load i64, i64* %4, align 8
  %22 = load i64, i64* @STATUS_MAX, align 8
  %23 = icmp sgt i64 %21, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %20, %16
  store i32 1, i32* %2, align 4
  br label %32

25:                                               ; preds = %20
  %26 = load i32, i32* @expect_status, align 4
  %27 = load i64, i64* %4, align 8
  %28 = call i32 @INT32_BITFIELD_CHECK_BOUNDS(i32 %26, i64 %27)
  %29 = load i32, i32* @expect_status, align 4
  %30 = load i64, i64* %4, align 8
  %31 = call i32 @INT32_BITFIELD_SET(i32 %29, i64 %30)
  store i32 0, i32* %2, align 4
  br label %32

32:                                               ; preds = %25, %24, %15
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i64 @strtol(i8*, i8**, i32) #1

declare dso_local i32 @INT32_BITFIELD_CHECK_BOUNDS(i32, i64) #1

declare dso_local i32 @INT32_BITFIELD_SET(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
